# pioneer-detection-method

./: .gitattributes  .gitignore  CITATION.cff  Emeline_Maunais_Ukraine_Inflation.py  LICENSE  PDM Inflation Panel - Jiayu HUANG.py  README.md  SOLUTION_NOTES.md  Ukraine_Reine_Adelaide  amin_tarbouch_pdm.py  colin_ukraine_inflation.py  data_nbu_uahusd.csv  data_wb_ukraine_gdp.csv  daza_ukraine_inflation.py  ecb_extension.py  ecb_hicp_panel_pioneer_extension.py  ecb_hicp_panel_var_granger.py  ecb_hicp_panel_var_granger_be.py  elmetwaly_ukraine_inflation.py  exam_blindauer.py  exam_counterfactual_ukraine_inflation.tex  exercise_pdm_discussion_andrey_zalizniak.txt  exercise_pdm_inflation  exercise_pdm_inflation.py  exercise_pdm_inflation.tex  exercise_pdm_inflation_andrey_zalizniak.py  exercise_pdm_inflation_france.py  extension_ua.py  fr_forecast_rmse.csv  guerfa_ukraine_inflation.py  hugo_exercice_pdm.py  leblond_ukraine.py  part_A_monetary_regime.md  part_B_counterfactual.py  part_B_interpretation.md  pdm.py  pdm_demo.py  pioneer_weights_subperiod_table.csv  prisoner_detection_extension.py  pyproject.toml  (+8 more)
QMF_Exam_Contrefactual_Ukr_infl_AZ/: .gitignore  PartA_Andrey.py  PartB_Andrey.py  README.md  requirements.txt
docs/: PUBLISHING.md
outputs_pdm_france/: README_outputs.txt  part_a_average_weights_by_period.csv  part_a_discussion.txt  part_a_nonzero_weight_summary.csv  part_a_rankings_by_period.csv  part_b_discussion.txt  part_b_dominant_pioneer.csv  part_b_dominant_pioneer_counts.csv  part_b_rmse_by_subperiod.csv  part_b_rmse_overall.csv
outputs_pdm_inflation/: discussion_notes.txt  inflation_panel_complete_case.csv  inflation_panel_raw.csv  partA_average_weights_by_period.csv  partA_nonzero_pioneer_summary.csv  partA_pdm_angles_weights.csv  partA_pioneer_strength_by_period.csv  partA_rankings_by_period.csv  partB_dominant_pioneer.csv  partB_method_forecasts.csv  (+2 more)
(+20 files in other folders)
